Project Completed, build done

--- a/src/index.css
+++ b/src/index.css
@@ -50,14 +50,14 @@ body {
 }
 
 .container {
-  max-width: 66vh;
+  width: 500px;
   margin: 1px auto;
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
-  padding: 1px;
+  padding: 10px;
   border-radius: 5px;
-  background-color: #313133a4;
+  /* background-color: #313133a4; */
 }
 
 .header {
@@ -95,7 +95,7 @@ body {
 }
 
 .task {
-  background: #f4f4f431;
+  background: #7b6a6a31;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
@@ -116,17 +116,19 @@ body {
 }
 
 .form-control {
-  margin: 20px 0;
+  margin: 20px;
 }
 
 .form-control label {
   display: block;
+  color: #000;
+  margin: 10px;
 }
 
 .form-control input {
   width: 100%;
   height: 40px;
-  margin: 5px;
+  margin: 10px;
   padding: 3px 7px;
   font-size: 17px;
 }
